@@ -1,165 +1,584 @@
-# Local Development Setup
+# LucentFlow Local Development Guide
 
-This guide explains how to run LucentFlow with a local H2 database without Docker.
+## Overview
 
-## 🚀 Quick Start
+LucentFlow supports **Hybrid Development Mode** for optimal Base network development experience. This architecture combines Dockerized infrastructure services with local application execution, enabling rapid iteration while maintaining production-like database persistence and configuration.
 
-### 1. Run with Local Profile
+---
+
+## 🎯 Hybrid Development Philosophy
+
+**"Infrastructure as Code, Application as Local"**
+- **Docker Services**: PostgreSQL, pgAdmin, Metabase run in containers
+- **Local Application**: Java 21 Virtual Threads with hot-reload capabilities
+- **Production Parity**: Same database, networking, and configuration as production
+- **Development Speed**: Fast iteration with immediate code changes
+
+---
+
+## 🚀 Prerequisites
+
+### System Requirements
+
+| Component | Version | Purpose |
+|-----------|---------|---------|
+| **Java JDK** | 21+ | Project Loom Virtual Threads support |
+| **Maven** | 3.9+ | Build system and dependency management |
+| **Docker Desktop** | Latest | Infrastructure services (PostgreSQL, Metabase) |
+| **IDE** | IntelliJ IDEA/Eclipse | Java 21 Project Loom support |
+
+### Java 21 Verification
+
+**Linux/Mac:**
 ```bash
-cd lucentflow-api
-mvn spring-boot:run -Dspring.profiles.active=local
+# Verify Java 21 with Project Loom support
+java -version
+# Expected: openjdk version "21.0.x" 2023-09-19
+
+# Verify Virtual Threads availability
+jshell --startup=PRINT "Virtual threads available: " + Thread.virtualThreadPermitted()
 ```
 
-### 2. Access H2 Console
-Open your browser and navigate to:
-```
-http://localhost:8080/h2-console
-```
+**Windows:**
+```powershell
+# Verify Java 21 with Project Loom support
+java -version
+# Expected: openjdk version "21.0.x" 2023-09-19
 
-**JDBC URL:** `jdbc:h2:mem:lucentflow`
-**Username:** `sa`
-**Password:** (leave empty)
-
-## 📋 Configuration Details
-
-### Database Configuration
-- **Type:** H2 In-Memory Database
-- **Mode:** PostgreSQL Compatibility
-- **DDL:** Create-Drop (fresh database each restart)
-- **Console:** Enabled at `/h2-console`
-
-### Application Configuration
-- **Profile:** `local`
-- **RPC URL:** `https://mainnet.base.org` (still connects to real blockchain)
-- **Logging:** DEBUG level for SQL and application logs
-
-## 🔧 Configuration Files
-
-### `application-local.yml`
-```yaml
-spring:
-  datasource:
-    url: jdbc:h2:mem:lucentflow;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: 
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: create-drop
-    show-sql: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+# Verify Virtual Threads availability
+jshell --startup=PRINT "Virtual threads available: " + Thread.virtualThreadPermitted()
 ```
 
-## 🏛️ Architecture Validation
+**Windows Development Note:**
+> 💡 **On Windows, you can use either Git Bash or PowerShell for development commands.**
+> - **Git Bash**: Use Linux-style commands (`./start-infrastructure.sh`)
+> - **PowerShell**: Use Windows-style commands (`.\start-infrastructure.ps1`)
+> - **Recommendation**: Use PowerShell for native Windows experience and better integration
 
-### BaseBlockPoller Configuration
-The `BaseBlockPoller` automatically uses the local configuration because:
+### Docker Verification
 
-1. **Dependency Injection:** Uses `SyncStatusRepository` which connects to configured datasource
-2. **No Hardcoded Settings:** All database connections use Spring's auto-configuration
-3. **Profile-Based:** Spring profiles automatically select H2 when `local` profile is active
-
-### Validation Component
-The `LocalConfigurationValidator` component validates on startup:
-- ✅ Local profile is active
-- ✅ H2 database connection works
-- ✅ RPC URL is configured
-- ✅ H2 console is accessible
-
-> **Note**: `LocalConfigurationValidator` is a Spring `@Component` that automatically
-> validates the local development environment during application startup.
-
-## 📊 Development Features
-
-### Logging
-- **SQL Queries:** Visible in console
-- **Hibernate Statistics:** Enabled
-- **Application Logs:** DEBUG level
-
-### Database Management
-- **Auto-Creation:** Tables created automatically
-- **Sample Data:** No seed data (starts empty)
-- **Persistence:** In-memory only (lost on restart)
-
-## 🐛 Troubleshooting
-
-### Common Issues
-
-1. **Port 8080 in use:**
-   ```bash
-   # Change port in application-local.yml
-   server:
-     port: 8081
-   ```
-
-2. **Database connection issues:**
-   - Check H2 console is accessible
-   - Verify JDBC URL matches configuration
-
-3. **Profile not active:**
-   - Ensure `-Dspring.profiles.active=local` is included
-   - Check startup logs for profile validation
-
-### Validation Logs
-Look for these messages on startup:
-```
-🔍 Validating Local Configuration...
-✅ Local profile is active
-✅ Database URL: jdbc:h2:mem:lucentflow
-✅ H2 Database configured successfully
-✅ RPC URL: https://mainnet.base.org
-🚀 Local-Mock environment is ready!
-```
-
-## 🔄 Development Workflow
-
-### Typical Development Session
-1. Start application with local profile
-2. Open H2 console to inspect data
-3. Monitor logs for whale detections
-4. Restart to get fresh database (create-drop)
-
-## ⚠️ Development Considerations
-
-### H2 Database Limitations
-
-**Warning**: Complex SQL analytics should be verified against the Docker-based PostgreSQL environment because:
-
-- **SQL Dialect Differences**: H2 PostgreSQL compatibility mode has limitations
-- **Function Support**: Advanced PostgreSQL functions may not work in H2
-- **Performance Characteristics**: Query optimization differs significantly
-- **Data Types**: Some PostgreSQL-specific types have limited H2 support
-
-**Recommended Workflow:**
-1. Develop and test basic functionality with H2 (fast iteration)
-2. Verify complex analytics with PostgreSQL before production deployment
-3. Use PostgreSQL for performance testing and final validation
-
-### Data Persistence
-- **Development:** In-memory (lost on restart)
-- **Testing:** Perfect for unit/integration tests
-- **Production:** Use PostgreSQL configuration instead
-
-## 🚦 Next Steps
-
-### For Production
-Switch to PostgreSQL configuration:
+**Linux/Mac:**
 ```bash
-mvn spring-boot:run -Dspring.profiles.active=prod
+# Verify Docker is running
+docker --version
+docker-compose --version
+
+# Test Docker daemon
+docker run hello-world
 ```
 
-### For Testing
-Run integration tests with H2:
-```bash
-mvn test -Dspring.profiles.active=test
+**Windows:**
+```powershell
+# Verify Docker is running
+docker --version
+docker-compose --version
+
+# Test Docker daemon
+docker run hello-world
 ```
 
 ---
 
-**Note:** This local setup uses the real Base blockchain RPC but stores data locally in H2 for development convenience.
+## 🏗️ Hybrid Workspace Setup
 
-*Documentation maintained by @author ArchLucent*
+### Step 1: Start Infrastructure Services
+
+```bash
+# Navigate to deployment directory
+cd lucentflow-deployment/docker
+
+# Start database and management services only
+docker-compose up -d postgres pgadmin metabase
+
+# Verify services are running
+docker-compose ps
+```
+
+**Expected Output:**
+```
+NAME                  STATUS              PORTS
+lucentflow-postgres    Up (healthy)        5432->5432/tcp
+lucentflow-pgadmin     Up                   5050->80/tcp
+lucentflow-metabase    Up                   3000->3000/tcp
+```
+
+### Step 2: Configure Local Application Profile
+
+Create/verify `application-local.yml` in `lucentflow-api/src/main/resources/`:
+
+```yaml
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/lucentflow?reWriteBatchedInserts=true
+    username: lucentflow
+    password: lucentflow_pwd
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 5
+      connection-timeout: 30000
+      initialization-fail-timeout: 60000
+  jpa:
+    hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.PostgreSQLDialect
+      jdbc:
+        batch_size: 50
+        order_inserts: true
+        order_updates: true
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    validate-on-migrate: true
+
+# Local development specific
+  devtools:
+    restart:
+      enabled: true
+    livereload:
+      enabled: true
+```
+
+### Step 3: IDE Configuration for Project Loom
+
+#### IntelliJ IDEA Setup
+
+1. **Open Project**: File → Open → `lucentflow/`
+2. **JDK Configuration**: File → Project Structure → Project SDK → JDK 21
+3. **Lombok Plugin**: Ensure Lombok plugin is installed and enabled
+4. **Virtual Threads**: No special configuration needed (Java 21 GA)
+
+#### Eclipse Setup
+
+1. **Import Project**: File → Import → Existing Maven Projects
+2. **JDK Configuration**: Project → Properties → Java Compiler → JDK 21
+3. **Lombok Setup**: Install Lombok IDE integration
+4. **Annotation Processing**: Enable annotation processing
+
+---
+
+## 🌐 RPC Proxy Configuration
+
+### Corporate Proxy Setup
+
+For development behind corporate firewalls, configure proxy settings:
+
+```bash
+# Development with proxy
+cd lucentflow-api
+mvn spring-boot:run \
+  "-Dspring.profiles.active=local" \
+  "-Dhttps.proxyHost=127.0.0.1" \
+  "-Dhttps.proxyPort=10808" \
+  "-Dhttp.proxyHost=127.0.0.1" \
+  "-Dhttp.proxyPort=10808"
+```
+
+### Environment Variables (Alternative)
+
+```bash
+# Set proxy environment variables
+export HTTPS_PROXY=http://127.0.0.1:10808
+export HTTP_PROXY=http://127.0.0.1:10808
+
+# Run application
+mvn spring-boot:run -Dspring.profiles.active=local
+```
+
+### Maven Configuration
+
+Add proxy settings to `~/.m2/settings.xml`:
+
+```xml
+<settings>
+  <proxies>
+    <proxy>
+      <id>corporate-proxy</id>
+      <active>true</active>
+      <protocol>http</protocol>
+      <host>127.0.0.1</host>
+      <port>10808</port>
+    </proxy>
+  </proxies>
+</settings>
+```
+
+---
+
+## 🔒 Triple Cross-Verification Testing
+
+### Security Anchor Philosophy
+
+The **Triple Cross-Verification (TCV)** suite ensures mathematical correctness of cryptographic operations through three independent validation layers:
+
+1. **Standard Vectors**: BIP-39 official test vector alignment
+2. **Signature Recovery**: Mathematical loopback proof (`PrivKey → Sign → Recover == Addr`)
+3. **Clean-room Implementation**: Manual Keccak-256 derivation bypassing high-level abstractions
+
+### Running TCV Suite
+
+```bash
+# Navigate to project root
+cd lucentflow
+
+# Run Triple Cross-Verification tests
+mvn test -Dtest=CryptoUtilsTest
+
+# Run specific TCV test methods
+mvn test -Dtest=CryptoUtilsTest#testAddressRecoveryFromSignature
+mvn test -Dtest=CryptoUtilsTest#testManualKeccakAddressDerivation
+mvn test -Dtest=CryptoUtilsTest#testNumericIndexRoundtrip
+```
+
+### TCV Test Categories
+
+| Test Category | Method | Purpose |
+|-------------|---------|---------|
+| **BIP-39 Vectors** | `testNumericIndexRoundtrip` | Validate against official BIP-39 test vectors |
+| **Signature Recovery** | `testAddressRecoveryFromSignature` | Mathematical proof of signing correctness |
+| **Manual Derivation** | `testManualKeccakAddressDerivation` | Clean-room Keccak-256 implementation |
+| **Cross-Platform** | `testCrossPlatformCompatibility` | Ensure consistent behavior across JVM versions |
+
+### Security Anchor Importance
+
+The TCV suite serves as LucentFlow's **Security Anchor**:
+- ✅ **Mathematical Proof**: Every cryptographic operation is mathematically verified
+- ✅ **Regression Prevention**: Any library update must pass all TCV tests
+- ✅ **Audit Trail**: Complete test coverage for security-critical functions
+- ✅ **Compliance**: Meets cryptocurrency industry security standards
+
+---
+
+## 🏗️ Modular Project Architecture
+
+### Code Structure
+
+LucentFlow follows a **layered modular architecture** promoting clean dependencies:
+
+```
+lucentflow/
+├── lucentflow-parent/          # Parent POM with version management
+├── lucentflow-common/           # Shared utilities and constants
+├── lucentflow-chain-sdk/        # Base network integration
+├── lucentflow-indexer/          # Blockchain data processing
+├── lucentflow-analyzer/          # Whale detection algorithms
+└── lucentflow-api/              # REST API and web layer
+```
+
+### Dependency Flow
+
+```mermaid
+graph TD
+    API[lucentflow-api] --> Common[lucentflow-common]
+    API --> ChainSDK[lucentflow-chain-sdk]
+    API --> Indexer[lucentflow-indexer]
+    API --> Analyzer[lucentflow-analyzer]
+    
+    Indexer --> Common
+    Indexer --> ChainSDK
+    Analyzer --> Common
+    Analyzer --> ChainSDK
+```
+
+### Lombok Integration
+
+**Code Style with Lombok:**
+
+```java
+// Service layer with Lombok annotations
+@Service
+@RequiredArgsConstructor  // Creates constructor with final fields
+@Slf4j             // Provides SLF4J logger
+public class WhaleTransactionService {
+    
+    private final WhaleTransactionRepository repository;
+    private final CryptoUtils cryptoUtils;
+    
+    @Transactional
+    public WhaleTransaction saveTransaction(@NonNull WhaleDto dto) {
+        log.info("Processing whale transaction: {}", dto.getHash());
+        WhaleTransaction entity = mapToEntity(dto);
+        return repository.save(entity);
+    }
+}
+
+// Entity with Lombok annotations
+@Entity
+@Table(name = "whale_transactions")
+@Getter @Setter @Builder @NoArgsConstructor @AllArgsConstructor
+public class WhaleTransaction {
+    
+    @Id @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+    
+    @Column(nullable = false, length = 66)
+    private String hash;
+    
+    @Column(nullable = false, precision = 18, scale = 18)
+    private BigDecimal valueEth;
+    
+    @CreationTimestamp
+    private LocalDateTime createdAt;
+}
+```
+
+---
+
+## 🚀 Local Application Execution
+
+### Development Mode Startup
+
+```bash
+# Navigate to API module
+cd lucentflow-api
+
+# Start with local profile and proxy (if needed)
+mvn spring-boot:run \
+  "-Dspring.profiles.active=local" \
+  "-Dhttps.proxyHost=127.0.0.1" \
+  "-Dhttps.proxyPort=10808"
+```
+
+### JAR Execution (Alternative)
+
+```bash
+# Build and run JAR directly
+cd lucentflow-api
+mvn clean package -DskipTests
+
+# Run with local profile and proxy (if needed)
+java "-Dspring.profiles.active=local" \
+     "-Dhttps.proxyHost=127.0.0.1" \
+     "-Dhttps.proxyPort=10808" \
+     -jar target/lucentflow-api-1.0.0-RELEASE.jar
+```
+
+### Expected Startup Logs
+
+```
+🔍 Validating Local Configuration...
+✅ Local profile is active
+✅ Database URL: jdbc:postgresql://localhost:5432/lucentflow
+✅ PostgreSQL Database configured successfully
+✅ RPC URL: https://mainnet.base.org
+✅ Virtual Threads enabled (Java 21)
+✅ Lombok annotations processed
+🚀 Hybrid development environment is ready!
+
+  .   ____          _            __ _
+ _    / / ___'_ __ _    _ \ \ | | | '_ \ | | '_ \ / _` | | |
+| |  / / \ \ \ \ /|_| | |_) | | |_) | | | | | | |
+|_|  /_/ \_\_\_\\___|_____|_____|_____|_|_|_|_|_|_|_|_|_|
+:: Spring Boot ::                (v3.4.0)
+
+🔍 Running Triple Cross-Verification tests...
+✅ BIP-39 Vector Alignment: PASSED
+✅ Signature Recovery Loopback: PASSED  
+✅ Manual Keccak-256 Derivation: PASSED
+🔒 Security Anchor verified: All cryptographic operations mathematically sound
+```
+
+---
+
+## 📊 Development Features
+
+### Hot Reload Capabilities
+
+**Spring Boot DevTools Integration:**
+- **Automatic Restart**: Code changes trigger application restart
+- **Live Reload**: Static resources refresh without restart
+- **Remote Debug**: Connect debugger to running application
+- **Property Refresh**: Configuration changes applied immediately
+
+### Database Management
+
+**PostgreSQL Integration:**
+- **Persistent Data**: Data survives application restarts
+- **pgAdmin Access**: http://localhost:5050 for database inspection
+- **Migration Support**: Flyway migrations run automatically
+- **Production Parity**: Same database schema and constraints as production
+
+### Blockchain Integration
+
+**Real Base Network:**
+- **Live Data**: Actual whale transactions from Base mainnet
+- **Virtual Threads**: Concurrent block processing with Project Loom
+- **Rate Limiting**: Built-in retry and backoff for RPC calls
+- **Gas Optimization**: L2 gas price estimation and caching
+
+---
+
+## 🧪 Testing Strategy
+
+### Unit Testing
+
+```bash
+# Run all unit tests
+mvn test
+
+# Run specific test class
+mvn test -Dtest=WhaleTransactionServiceTest
+
+# Run with coverage
+mvn test jacoco:report
+```
+
+### Integration Testing
+
+```bash
+# Run integration tests with local profile
+mvn test -Dspring.profiles.active=local
+
+# Test API endpoints
+mvn test -Dtest=WhaleControllerIntegrationTest
+```
+
+### Triple Cross-Verification
+
+```bash
+# Run security-critical crypto tests
+mvn test -Dtest=CryptoUtilsTest
+
+# Verify TCV suite passes
+mvn test -Dtest=CryptoUtilsTest -DfailIfNoTests=false
+```
+
+---
+
+## 🐛 Troubleshooting
+
+### Common Hybrid Mode Issues
+
+#### Database Connection Failed
+
+```bash
+# Check PostgreSQL container
+docker-compose ps postgres
+docker-compose logs postgres
+
+# Test connection from host
+psql -h localhost -p 5432 -U lucentflow -d lucentflow
+
+# Verify application-local.yml configuration
+cat lucentflow-api/src/main/resources/application-local.yml
+```
+
+#### Virtual Threads Not Available
+
+```bash
+# Verify Java version
+java -version
+
+# Check for Project Loom support
+jshell -J--add-modules=jdk.incubator.vector -startup=PRINT "Virtual threads: " + Thread.virtualThreadPermitted()
+
+# Ensure JDK 21 GA or later
+# Update to latest JDK 21 if using early access version
+```
+
+#### Proxy Configuration Issues
+
+```bash
+# Test proxy connectivity
+curl -x http://127.0.0.1:10808 https://mainnet.base.org
+
+# Verify Maven proxy settings
+cat ~/.m2/settings.xml
+
+# Test without proxy (if direct connection available)
+mvn spring-boot:run -Dspring.profiles.active=local
+```
+
+#### Lombok Annotation Processing
+
+```bash
+# Verify Lombok is working
+mvn clean compile
+
+# Check generated sources
+target/generated-sources/annotations/
+
+# IDE-specific troubleshooting
+# IntelliJ: File → Settings → Build Tools → Compiler → Annotation Processors
+# Eclipse: Project → Properties → Annotation Processing
+```
+
+---
+
+## 🔄 Development Workflow
+
+### Typical Development Session
+
+1. **Start Infrastructure**: `docker-compose up -d postgres pgadmin metabase`
+2. **Run Application**: `mvn spring-boot:run -Dspring.profiles.active=local`
+3. **Open IDE**: Connect debugger to port 5005 (default)
+4. **Make Changes**: Edit code with hot reload
+5. **Run TCV**: `mvn test -Dtest=CryptoUtilsTest`
+6. **Verify Data**: Check pgAdmin at http://localhost:5050
+7. **Test API**: Use Swagger UI at http://localhost:8080/swagger-ui/index.html
+
+### Code Quality Workflow
+
+```bash
+# Format code
+mvn spotless:apply
+
+# Run static analysis
+mvn spotbugs:check
+
+# Run security scan
+mvn dependency-check:check
+
+# Verify TCV before commit
+mvn test -Dtest=CryptoUtilsTest
+```
+
+---
+
+## 🚦 Production Readiness
+
+### Pre-Deployment Checklist
+
+- [ ] All Triple Cross-Verification tests passing
+- [ ] Code formatted with Spotless
+- [ ] Static analysis clean (SpotBugs)
+- [ ] Security scan passed (dependency-check)
+- [ ] Integration tests successful
+- [ ] Database migrations tested
+- [ ] API endpoints verified with Swagger
+- [ ] Performance benchmarks completed
+
+### Deployment Transition
+
+```bash
+# Switch from local to production profile
+mvn clean package -DskipTests -Dspring.profiles.active=prod
+
+# Deploy with Docker
+docker-compose -f lucentflow-deployment/docker/docker-compose.yml up --build -d
+```
+
+---
+
+## 📚 Additional Resources
+
+### Project Loom Documentation
+- [Virtual Threads (JEP 425)](https://openjdk.org/jeps/425)
+- [Structured Concurrency (JEP 428)](https://openjdk.org/jeps/428)
+
+### Base Network Resources
+- [Base Documentation](https://docs.base.org/)
+- [Base RPC Endpoints](https://docs.base.org/tools/rpc)
+- [Base Block Explorer](https://basescan.org/)
+
+### Development Tools
+- [Lombok Documentation](https://projectlombok.org/)
+- [Spring Boot DevTools](https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#using.devtools)
+- [PostgreSQL JDBC Driver](https://jdbc.postgresql.org/documentation/)
+
+---
+
+**Hybrid Development Mode provides best of both worlds: production-like infrastructure with development speed and flexibility.**
+
+*Local development guide maintained for LucentFlow v1.0.0-RELEASE with Java 21 Virtual Threads*
